# beets-plexquery

./: .gitignore  README.md  pyproject.toml
beetsplug/: exceptions.py  plexquery.py
