[tool.poetry]
name = "beets-plexquery"
version = "0.1.0"
description = ""
authors = ["Elliott-Liu <16389800+Elliott-Liu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "beetsplug/plexquery.py" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4"

requests = ">=2.32.5,<3.0.0"
beets = ">=2.5.1,<3.0.0"
types-urllib3 = ">=1.26.25.14,<2.0.0.0"
plexapi = ">=4.17.2,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
