[tool.poetry]
name = "beets-plexquery"
version = "0.1.0"
description = ""
authors = ["Elliott-Liu <16389800+Elliott-Liu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "beetsplug/plexquery.py" }]

[tool.poetry.dependencies]
python = ">=3.10,<4"

requests = "*"
beets = ">=2.3.1,<3.0.0"
plexapi = ">=4.17.2,<5.0.0"

[tool.poetry.group.typing.dependencies]
types-urllib3 = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
